// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic enum 1`] = `
Array [
  Object {
    "code": "import { IUser } from \\"[TEMPLATE-INTERFACES-PATH]\\";
import { Types } from \\"./types/typemap\\";

export type UserType = \\"ADMIN\\" | \\"EDITOR\\" | \\"COLLABORATOR\\";

export interface UserParent {
  id: string;
  name: string;
  type: UserType;
}

export const User: IUser.Resolver<Types> = {
  id: parent => parent.id,
  name: parent => parent.name,
  type: parent => parent.type
};
",
    "force": false,
    "path": "User.ts",
  },
  Object {
    "code": "export interface Context {
  db: any;
  request: any;
}
",
    "force": false,
    "path": "types/context.ts",
  },
  Object {
    "code": "import { ITypes } from \\"../[TEMPLATE-INTERFACES-PATH]\\";

import { UserParent } from \\"../User\\";

import { Context } from \\"./context\\";

export interface Types extends ITypes {
  Context: Context;
  UserParent: UserParent;
}
",
    "force": true,
    "path": "types/typemap.ts",
  },
  Object {
    "code": "import { IResolvers } from \\"[TEMPLATE-INTERFACES-PATH]\\";
import { Types } from \\"./types/typemap\\";

import { User } from \\"./User\\";

export const resolvers: IResolvers<Types> = {
  User
};
",
    "force": false,
    "path": "index.ts",
  },
]
`;

exports[`basic schema 1`] = `
Array [
  Object {
    "code": "import { INumber } from \\"[TEMPLATE-INTERFACES-PATH]\\";
import { Types } from \\"./types/typemap\\";

export interface NumberParent {
  id?: string;
  value?: number;
}

export const Number: INumber.Resolver<Types> = {
  id: parent => parent.id,
  value: parent => parent.value
};
",
    "force": false,
    "path": "Number.ts",
  },
  Object {
    "code": "import { IQuery } from \\"[TEMPLATE-INTERFACES-PATH]\\";
import { Types } from \\"./types/typemap\\";

export interface QueryParent {}

export const Query: IQuery.Resolver<Types> = {
  id: parent => null,
  custom_required: parent => {
    throw new Error(\\"Resolver not implemented\\");
  },
  custom_nullable: parent => null,
  custom_array_nullable: parent => null,
  custom_array_required: parent => {
    throw new Error(\\"Resolver not implemented\\");
  },
  custom_with_arg: (parent, args) => {
    throw new Error(\\"Resolver not implemented\\");
  },
  custom_with_custom_arg: (parent, args) => {
    throw new Error(\\"Resolver not implemented\\");
  },
  scalar_required: parent => false,
  scalar_nullable: parent => null,
  scalar_array_nullable: parent => null,
  scalar_array_required: parent => [],
  scalar_with_arg: (parent, args) => false,
  scalar_with_custom_arg: (parent, args) => false
};
",
    "force": false,
    "path": "Query.ts",
  },
  Object {
    "code": "export interface Context {
  db: any;
  request: any;
}
",
    "force": false,
    "path": "types/context.ts",
  },
  Object {
    "code": "import { ITypes } from \\"../[TEMPLATE-INTERFACES-PATH]\\";

import { QueryParent } from \\"../Query\\";
import { NumberParent } from \\"../Number\\";

import { Context } from \\"./context\\";

export interface Types extends ITypes {
  Context: Context;
  QueryParent: QueryParent;
  NumberParent: NumberParent;
}
",
    "force": true,
    "path": "types/typemap.ts",
  },
  Object {
    "code": "import { IResolvers } from \\"[TEMPLATE-INTERFACES-PATH]\\";
import { Types } from \\"./types/typemap\\";

import { Query } from \\"./Query\\";
import { Number } from \\"./Number\\";

export const resolvers: IResolvers<Types> = {
  Query,
  Number
};
",
    "force": false,
    "path": "index.ts",
  },
]
`;

exports[`basic union 1`] = `
Array [
  Object {
    "code": "import { IUser } from \\"[TEMPLATE-INTERFACES-PATH]\\";
import { Types } from \\"./types/typemap\\";

import { StudentParent } from \\"./Student\\";
import { ProfessorParent } from \\"./Professor\\";

export type UserType = StudentParent | ProfessorParent;

export interface UserParent {
  id: string;
  name: string;
  type: UserType;
}

export const User: IUser.Resolver<Types> = {
  id: parent => parent.id,
  name: parent => parent.name,
  type: parent => parent.type
};
",
    "force": false,
    "path": "User.ts",
  },
  Object {
    "code": "import { IStudent } from \\"[TEMPLATE-INTERFACES-PATH]\\";
import { Types } from \\"./types/typemap\\";

export interface StudentParent {
  age: number;
}

export const Student: IStudent.Resolver<Types> = {
  age: parent => parent.age
};
",
    "force": false,
    "path": "Student.ts",
  },
  Object {
    "code": "import { IProfessor } from \\"[TEMPLATE-INTERFACES-PATH]\\";
import { Types } from \\"./types/typemap\\";

export interface ProfessorParent {
  degree?: string;
}

export const Professor: IProfessor.Resolver<Types> = {
  degree: parent => parent.degree
};
",
    "force": false,
    "path": "Professor.ts",
  },
  Object {
    "code": "export interface Context {
  db: any;
  request: any;
}
",
    "force": false,
    "path": "types/context.ts",
  },
  Object {
    "code": "import { ITypes } from \\"../[TEMPLATE-INTERFACES-PATH]\\";

import { UserParent } from \\"../User\\";
import { StudentParent } from \\"../Student\\";
import { ProfessorParent } from \\"../Professor\\";

import { Context } from \\"./context\\";

export interface Types extends ITypes {
  Context: Context;
  UserParent: UserParent;
  StudentParent: StudentParent;
  ProfessorParent: ProfessorParent;
}
",
    "force": true,
    "path": "types/typemap.ts",
  },
  Object {
    "code": "import { IResolvers } from \\"[TEMPLATE-INTERFACES-PATH]\\";
import { Types } from \\"./types/typemap\\";

import { User } from \\"./User\\";
import { Student } from \\"./Student\\";
import { Professor } from \\"./Professor\\";

export const resolvers: IResolvers<Types> = {
  User,
  Student,
  Professor
};
",
    "force": false,
    "path": "index.ts",
  },
]
`;
